// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<AllAnswersButton /> Should render a AllAnswersButton component 1`] = `
<div>
  <button
    class="guided-answer__header__navButtons home-icon"
    id="all-answers-button"
    title="Home"
  >
    <svg
      class="guided-answer__header__navButtons__content"
      fill="currentColor"
      height="1em"
      stroke="currentColor"
      stroke-width="0"
      viewBox="0 0 16 16"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        clip-rule="evenodd"
        d="M8.36 1.37l6.36 5.8-.71.71L13 6.964v6.526l-.5.5h-3l-.5-.5v-3.5H7v3.5l-.5.5h-3l-.5-.5V6.972L2 7.88l-.71-.71 6.35-5.8h.72zM4 6.063v6.927h2v-3.5l.5-.5h3l.5.5v3.5h2V6.057L8 2.43 4 6.063z"
        fill-rule="evenodd"
      />
    </svg>
     
    <span
      class="guided-answer__header__navButtons__content__text text-underline"
    >
      Home
    </span>
  </button>
</div>
`;

exports[`<BackButton /> Should render a BackButton component 1`] = `
<div>
  <button
    class="guided-answer__header__navButtons"
    id="back-button"
    title="Step back"
  >
    <svg
      class="guided-answer__header__navButtons__content"
      fill="currentColor"
      height="1em"
      stroke="currentColor"
      stroke-width="0"
      viewBox="0 0 16 16"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        clip-rule="evenodd"
        d="M7 3.093l-5 5V8.8l5 5 .707-.707-4.146-4.147H14v-1H3.56L7.708 3.8 7 3.093z"
        fill-rule="evenodd"
      />
    </svg>
    <span
      class="guided-answer__header__navButtons__content text-underline"
      style="margin-left: 3px;"
    >
      Step back
    </span>
  </button>
</div>
`;

exports[`<RestartButton /> Should render a RestartButton component 1`] = `
<div>
  <button
    class="guided-answer__header__navButtons"
    id="restart-button"
    title="Restart"
  >
    <svg
      class="guided-answer__header__navButtons__content"
      fill="currentColor"
      height="1em"
      stroke="currentColor"
      stroke-width="0"
      viewBox="0 0 16 16"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        clip-rule="evenodd"
        d="M4.681 3H2V2h3.5l.5.5V6H5V4a5 5 0 1 0 4.53-.761l.302-.954A6 6 0 1 1 4.681 3z"
        fill-rule="evenodd"
      />
    </svg>
    <span
      class="guided-answer__header__navButtons__content text-underline"
      style="margin-left: 3px;"
    >
      Restart
    </span>
  </button>
</div>
`;

exports[`<ShareButton /> Should render a ShareButton component 1`] = `
<div>
  <div>
    <button
      class="ms-Button ms-Button--icon is-checked guided-answer__header__navButtons guided-answer__header__navButtons__content root-109"
      data-is-focusable="true"
      id="callout-test-id"
      title="Share this guide"
      type="button"
    >
      <span
        class="ms-Button-flexContainer flexContainer-110"
        data-automationid="splitbuttonprimary"
      >
        <i
          aria-hidden="true"
          class="ms-Icon root-105 ms-Button-icon icon-112"
          data-icon-name="Link"
        />
      </span>
    </button>
    <span
      class="ms-layer"
    />
  </div>
</div>
`;
